@@ -3,6 +3,7 @@
 Provides the PyPIRCCommand class, the base class for the command classes
 that uses .pypirc in the distutils.command package.
 """
+import cgi
 import os
 from configparser import ConfigParser
 
@@ -100,6 +101,12 @@ class PyPIRCCommand(Command):
                         'realm': self.DEFAULT_REALM}
 
         return {}
+
+    def _read_pypi_response(self, response):
+        """Read and decode a PyPI HTTP response."""
+        content_type = response.getheader('content-type', 'text/plain')
+        encoding = cgi.parse_header(content_type)[1].get('charset', 'ascii')
+        return response.read().decode(encoding)
 
     def initialize_options(self):
         """Initialize options."""
