@@ -6,6 +6,7 @@ from test.support import run_unittest
 from distutils.command import upload as upload_mod
 from distutils.command.upload import upload
 from distutils.core import Distribution
+from distutils.log import INFO
 
 from distutils.tests.test_config import PYPIRC, PyPIRCCommandTestCase
 
@@ -47,6 +48,14 @@ class FakeOpen(object):
         else:
             self.req = None
         self.msg = 'OK'
+
+    def getheader(self, name, default=None):
+        return {
+            'content-type': 'text/plain; charset=utf-8',
+            }.get(name.lower(), default)
+
+    def read(self):
+        return b'xyzzy'
 
     def getcode(self):
         return 200
@@ -108,10 +117,11 @@ class uploadTestCase(PyPIRCCommandTestCase):
         # lets run it
         pkg_dir, dist = self.create_dist(dist_files=dist_files)
         cmd = upload(dist)
+        cmd.show_response = 1
         cmd.ensure_finalized()
         cmd.run()
 
-         # what did we send ?
+        # what did we send ?
         headers = dict(self.last_open.req.headers)
         self.assertEqual(headers['Content-length'], '2087')
         self.assertTrue(headers['Content-type'].startswith('multipart/form-data'))
@@ -119,6 +129,11 @@ class uploadTestCase(PyPIRCCommandTestCase):
         self.assertEqual(self.last_open.req.get_full_url(),
                          'https://pypi.python.org/pypi')
         self.assertIn(b'xxx', self.last_open.req.data)
+
+        # The PyPI response body was echoed
+        results = self.get_logs(INFO)
+        self.assertIn('xyzzy\n', results[-1])
+
 
 def test_suite():
     return unittest.makeSuite(uploadTestCase)
